objects/CustomCategoryTreeLevel__c.object
<CustomObject>
    <fields>
        <fullName>CustomCategoryTree__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Custom Category Tree</label>
        <referenceTo>CustomCategoryTree__c</referenceTo>
        <relationshipLabel>Custom Category Tree Levels</relationshipLabel>
        <relationshipName>CustomCategoryTreeLevels</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <required>true</required>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Keyword__c</fullName>
        <label>Keyword</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PointOfContact__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Point Of Contact</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>PointOfContact__c.ChannelType__c</field>
                <operation>equals</operation>
                <value>Portal</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>PointOfContact__c</referenceTo>
        <relationshipLabel>Custom Category Tree Levels</relationshipLabel>
        <relationshipName>CustomCategoryTreeLevels</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TreeIndex__c</fullName>
        <label>Tree Index</label>
        <length>10</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TreeLabel__c</fullName>
        <label>Tree Item Customer facing label</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>Custom Category Tree Level</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Tree Level Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Custom Category Tree Levels</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>